# official-project-repo

./: .gitmodules  Makefile  add_instrumentation.sh  asm_parsing.cpp  graph.py  ir_parsing.cpp  loop.sh  redis2  ropper_parsing.py  run-benchmark.sh
binaries/: basic_blocks.out  exit_points.out  loop.sh  plain.out  redis1  redis3  ropper_parsing.py
bitcode/: _Exit.bc  __adjust.bc  __adjust.ll  __adjust.s  __atexit.bc  __atexit.ll  __atexit.s  __call_atexit.bc  __call_atexit.ll  __call_atexit.s  __dprintf.bc  __dprintf.ll  __dprintf.s  __exp10.bc  __exp10.ll  __exp10.s  __ten_mu.ll  __ten_mu.s  a64l.bc  a64l.ll  a64l.s  abs.bc  abs.ll  adlist.bc  adlist.ll  adlist.s  ae.bc  ae.ll  ae.s  aliasesbi.bc  aliasesi.bc  aliasesi.ll  aliasesi.s  aligned_alloc.bc  aligned_alloc.ll  alloc.unikraft.bc  alloc.unikraft.ll  alloc.unikraft.s  anet.bc  anet.ll  (+2812 more)
bitcode2/: _Exit.ll  __adjust.bc  __adjust.ll  __adjust.s  __atexit.bc  __atexit.ll  __atexit.s  __call_atexit.bc  __call_atexit.ll  __call_atexit.s  __dprintf.bc  __dprintf.ll  __dprintf.s  __exp10.bc  __exp10.ll  __exp10.s  __ten_mu.bc  a64l.bc  a64l.ll  a64l.s  abs.s  adlist.bc  adlist.ll  adlist.s  ae.bc  ae.ll  ae.s  aliasesbi.ll  aliasesbi.s  aliasesi.bc  aliasesi.ll  aliasesi.s  aligned_alloc.s  alloc.unikraft.bc  alloc.unikraft.ll  alloc.unikraft.s  anet.bc  anet.ll  anet.s  aof.bc  (+2806 more)
bitcode3/: _Exit.ll  _Exit.s  __adjust.bc  __adjust.ll  __adjust.s  __atexit.bc  __atexit.ll  __atexit.s  __call_atexit.bc  __call_atexit.ll  __call_atexit.s  a64l.bc  (+3212 more)
llvm-pass/touchmemory/: CMakeLists.txt  TouchMemory.cpp  TouchMemory2.cpp
(+14 files in other folders)
